fix(ui): checkbox truncated from positioned properties https://github.com/logseq/db-test/issues/63

--- a/src/main/frontend/components/page.css
+++ b/src/main/frontend/components/page.css
@@ -145,6 +145,8 @@ html.is-native-iphone-without-notch {
   opacity: 0;
   color: var(--ls-primary-text-color);
   transform: scale(.8);
+  margin-left: -1px;
+
 
   &:hover {
     color: var(--ls-primary-text-color);
